search map logic fixes

--- a/app/blocks/space-map/space-map.pug
+++ b/app/blocks/space-map/space-map.pug
@@ -2,5 +2,5 @@ mixin space-map(mapID)
   +b.space-map&attributes(attributes)
     +e.BUTTON.close(type="button") Close map
     +e.wrapper
-      +e.map(id=(mapID || ''))
+      +e.map(id=(mapID || '') data-map-markers-url="assets/data/lonely-offer-marker.json")
     block
