--- a/app/pages/search/search-types-v2.pug
+++ b/app/pages/search/search-types-v2.pug
@@ -22,7 +22,7 @@ block content
       +nd-search-filter-v2
 
     +e.column_map.js-map-sm-show-fullview
-      +nd-search-map-v2('search-map-bytype')
+      +nd-search-map-v2('search-map', 'assets/data/offer-markers.json')
 
     +e.column_results
       +e.wrapper
