--- a/app/pages/search/search-v2-header.pug
+++ b/app/pages/search/search-v2-header.pug
@@ -21,7 +21,7 @@ block header
 block content
   +layout._search-header
     +e.column_map.js-map-sm-show-fullview
-      +nd-search-map-v2('search-map-unsort')
+      +nd-search-map-v2('search-map', 'assets/data/space-markers.json')
 
     +e.column_results
       +e.wrapper
