--- a/app/components/search-map/nd-search-map.scss
+++ b/app/components/search-map/nd-search-map.scss
@@ -172,78 +172,12 @@
   &__button {
     position: absolute;
     display: block;
-    background-color: $nd-color-basic-light;
-    color: $nd-color-basic;
-    font-weight: 700;
-    transition: opacity $ease-main;
     z-index: 2;
 
-    @include rule(border-radius, (xl: 20px, xlg: 20, lg: 20, md: 20, sm: 20));
-    @include rule(padding-left, (xl: 23px, xlg: 23, lg: 9, md: 23, sm: 28));
-    @include rule(padding-right, (xl: 23px, xlg:23, lg: 14, md: 23, sm: 28));
-    @include rule(top, (xl: 28px, xlg: 28, lg: 44, md: 25));
-    @include rule(left, (xl: 36px, xlg: 36, lg: 36, md: 25));
-    @include rule(font-size, (xl: 18px, xlg: 18, lg: 14, md: 18, sm: 16));
+    @include rule(top, (xl: 22px, xlg: 22, lg: 20, md: 10));
+    @include rule(left, (xl: 32px, xlg: 32, lg: 32, md: 25));
     @include rule(bottom, (sm: 28));
     @include rule(right, (sm: 16));
-    @include rule(height, (xl: 40px, xlg: 40, lg: 32, md: 40, sm: 40));
-    box-shadow: boxShadow(3, 3, 3, 0, rgba(0, 0, 0, 0.02)),
-    boxShadow(2, 2, 2, 0, rgba(0, 0, 0, 0.04)),
-    boxShadow(1, 1, 1, 0, rgba(0, 0, 0, 0.03));
-
-    @include screen('xlg', max, 2) {
-      box-shadow: boxShadow(3, 3, 3, 0, rgba(0, 0, 0, 0.02), 1660),
-      boxShadow(2, 2, 2, 0, rgba(0, 0, 0, 0.04), 1660),
-      boxShadow(1, 1, 1, 0, rgba(0, 0, 0, 0.03), 1660);
-    }
-
-    @include screen('lg', max, 2) {
-      box-shadow: boxShadow(3, 3, 3, 0, rgba(0, 0, 0, 0.02), 1366),       boxShadow(2, 2, 2, 0, rgba(0, 0, 0, 0.04), 1366), boxShadow(1, 1, 1, 0, rgba(0, 0, 0, 0.03), 1366);
-    }
-
-    @include screen('md', max, 2) {
-      box-shadow: boxShadow(3, 3, 3, 0, rgba(0, 0, 0, 0.02), 960),
-      boxShadow(2, 2, 2, 0, rgba(0, 0, 0, 0.04), 960),
-      boxShadow(1, 1, 1, 0, rgba(0, 0, 0, 0.03), 960);
-    }
-
-    @include screen('sm', max, 2) {
-      box-shadow: boxShadow(1, 3, 11, 0, rgba(0, 0, 0, 0.25), 375);
-    }
-
-    span {
-      display: inline-flex;
-      justify-content: center;
-      align-items: center;
-      height: 100%;
-
-      &::before {
-        @include rule(width, (xl: 20px, xlg: 20, lg: 20, md: 20, sm: 20));
-        @include rule(background-size, (xl: 20px, xlg: 20, lg: 16, md: 20, sm: 20));
-        @include rule(margin-right, (xl: 10px, xlg: 10, lg: 10, md: 10, sm: 10));
-
-        display: inline-block;
-        content: '';
-        top: 0;
-        left: 0;
-        height: 100%;
-        background-image: $icon-map-blue;
-        background-repeat: no-repeat;
-        background-position: 50% 50%;
-
-        @include screen('sm', max, 2) {
-          display: none;
-        }
-      }
-
-      .map-in-fullview & {
-        &::before {
-          @include rule(background-size, (xl: 12px, xlg: 12, lg: 12, md: 10, sm: 10));
-          @include rule(margin-right, (md: 4, sm: 10));
-          background-image: $icon-bold-cross-blue;
-        }
-      }
-    }
 
     @include screen('sm', max, 2) {
       opacity: 0;
@@ -252,41 +186,9 @@
       left: auto;
     }
 
-    [data-map-hidden] {
-      display: inline-flex;
-
-      .map-in-fullview & {
-        display: none;
-      }
-    }
-
-    [data-map-shown="xl"] {
-      display: none;
-
-      .map-in-fullview & {
-        @include screen('sm', min, 2) {
-          display: inline-flex;
-        }
-      }
-    }
-
-    [data-map-shown="sm"] {
-      display: none;
-
-      .map-in-fullview & {
-        @include screen('sm', max, 2) {
-          display: inline-flex;
-        }
-      }
-    }
-
     .map-in-fullview & {
-      @include rule(font-size, (xl: 18px, xlg: 18, lg: 18, md: 14, sm: 16));
-      @include rule(padding-left, (xl: 12px, xlg: 12, lg: 12, md: 5, sm: 28));
-      @include rule(padding-right, (xl: 16px, xlg: 16, lg: 16, md: 12, sm: 28));
-      @include rule(left, (xl: 24px, xlg: 24, lg: 40, md: 30));
-      @include rule(top, (lg: 28, md: 60));
-      @include rule(height, (xl: 40px, xlg: 40, lg: 40, md: 30, sm: 40));
+      opacity: 0;
+      pointer-events: none;
 
       @include screen('sm', max, 2) {
         opacity: 1;
@@ -366,8 +268,8 @@
     padding: 0;
     box-sizing: border-box;
 
-    @include rule(top, (md: 66, sm: 60));
-    @include rule(height, (md: 257, sm: 208));
+    @include rule(top, (md: 0, sm: 60));
+    @include rule(height, (md: 353, sm: 208));
 
     @include screen('md', max, 2) {
       position: fixed;
@@ -377,7 +279,7 @@
 
     .map-in-fullview & {
       @include screen('md', max, 2) {
-        height: calc(100% - (6600 / 960) * 1vw);
+        height: 100%;
       }
 
       @include screen('sm', max, 2) {
@@ -387,7 +289,7 @@
 
     .is-map-animated-out & {
       @include screen('md', max, 2) {
-        height: calc(100% - (6600 / 960) * 1vw);
+        height: 100%;
       }
 
       @include screen('sm', max, 2) {
