--- a/app/pages/space/space-v4.pug
+++ b/app/pages/space/space-v4.pug
@@ -18,12 +18,12 @@ block content
   +layout._static
     +e.column_start._start_space
       +e.wrapper
-        +layout-header({type: 'space', popup: false})._main._inner
+        +layout-header({type: 'space', popup: false})._inner
         +space-description
         +space-description-panel
 
     +e.column_end.nd-hide-sm
-      +layout-header({type: 'list', popup: false})._list._sort._popup._bg-gray
+      +layout-header({type: 'list', popup: false})._list._popup._bg-gray
       +e.wrapper
         +nd-results._v2
           +e.divider
@@ -65,7 +65,7 @@ block content
 
     +e.column_start._start_offer._popup(data-layout="offer")
       +e.wrapper
-        +offer-description
+        +offer-description(true)
         +offer-description-panel()._abs(data-offer-panel)
           +e.offer
             +space-type._gray.__type
