--- a/app/blocks/layout-header/layout-header.scss
+++ b/app/blocks/layout-header/layout-header.scss
@@ -5,6 +5,7 @@
   justify-content: flex-start;
   z-index: 5;
   background-color: $nd-color-bg;
+  pointer-events: auto;
 
   @include rule(height, (xl: 142px, xlg: 142, lg: 106, md: 80, sm: 60));
 
@@ -14,13 +15,20 @@
     align-items: center;
 
     #{$b}_main & {
-      margin-bottom: auto;
+      &:not(:last-child) {
+        @include rule(margin-right, (xl: 20px, xlg: 20, lg: 20, md: 20, sm: 20));
+      }
     }
   }
 
   &__box {
     @include rule(width, (xl: 12px, xlg: 12, lg: 10, md: 6, sm: 6));
     @include rule(height, (xl: 12px, xlg: 12, lg: 10, md: 6, sm: 6));
+
+    #{$b}_main & {
+      @include rule(width, (xl: 8px, xlg: 8, lg: 8, md: 8, sm: 6));
+      @include rule(height, (xl: 8px, xlg: 8, lg: 8, md: 8, sm: 6));
+    }
   }
 
   &__title {
@@ -32,8 +40,8 @@
 
     @include rule(font-size, (xl: 30px, xlg: 30, lg: 24, md: 18, sm: 18));
 
-    &_fz20 {
-      @include rule(font-size, (xl: 20px, xlg: 20, lg: 20, md: 18, sm: 18));
+    #{$b}_main & {
+      @include rule(font-size, (xl: 15px, xlg: 15, lg: 15, md: 18, sm: 18));
     }
   }
 
@@ -111,32 +119,26 @@
     }
 
     #{$b}_main & {
-      @include rule(padding-left, (xl: 45px, xlg: 45, lg: 25, md: 25, sm: 25));
+      align-items: center;
+
+      @include rule(padding-left, (xl: 22px, xlg: 22, lg: 22, md: 25, sm: 25));
       @include rule(padding-right, (xl: 50px, xlg: 50, lg: 30, md: 40, sm: 25));
-      @include rule(padding-top, (xl: 23px, xlg: 23, lg: 28, md: 25, sm: 0));
-      @include rule(padding-bottom, (xl: 16px, xlg: 16, lg: 13, md: 17, sm: 0));
     }
 
     #{$b}_sort & {
-      flex-wrap: wrap;
-      align-content: space-between;
+      align-items: center;
 
-      @include rule(padding-top, (xl: 24px, xlg: 24, lg: 24, md: 10, sm: 0));
       @include rule(padding-left, (xl: 50px, xlg: 50, lg: 28, md: 28, sm: 25));
       @include rule(padding-right, (xl: 50px, xlg: 50, lg: 25, md: 25, sm: 25));
-      @include rule(padding-bottom, (md: 12, sm: 12));
 
       @include screen('md', max, 2) {
-        align-items: center;
         flex: none;
         width: 100%;
       }
 
       .map-in-fullview &, .is-map-animated-out & {
-        @include rule(padding-top, (xl: 17px, xlg: 17, lg: 17, md: 5, sm: 5));
-        @include rule(padding-bottom, (md: 10, sm: 10));
         @include rule(padding-left, (xl: 25px, xlg: 25, lg: 28, md: 28, sm: 25));
-        @include rule(padding-right, (xl: 25px, xlg: 25, lg: 25, md: 25, sm: 25));
+        @include rule(padding-right, (xl: 50px, xlg: 50, lg: 25, md: 40, sm: 40));
 
         @include screen('md', max, 2) {
           flex: 1;
@@ -153,47 +155,42 @@
     }
 
     #{$b}_list & {
+      flex-wrap: wrap;
       align-content: flex-end;
+
+      @include rule(padding-top, (xl: 24px, xlg: 24, lg: 24, md: 10, sm: 0));
+      @include rule(padding-left, (xl: 50px, xlg: 50, lg: 28, md: 28, sm: 25));
+      @include rule(padding-right, (xl: 50px, xlg: 50, lg: 25, md: 25, sm: 25));
+      @include rule(padding-bottom, (md: 12, sm: 12));
 
       @include screen('md', max, 2) {
         align-content: center;
+        flex: none;
+        width: 100%;
       }
     }
   }
 
   &__select {
     width: 100%;
-
-    @include rule(width, (md: 150, sm: 150));
-
-    #{$b}_list & {
-      @include screen('md', max, 2) {
-        width: 100%;
-      }
-
-      .drop-navigation {
-        &__head {
-          @include screen('md', max, 2) {
-            width: 100%;
-          }
-        }
-      }
-    }
   }
 
   &__describe {
+    height: 100%;
+    display: flex;
+
+    @include screen('sm', max, 2) {
+      display: none;
+    }
+
     #{$b}_main & {
-      height: 100%;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-      align-items: flex-start;
+      align-items: center;
     }
 
     #{$b}_inner & {
-      @include screen('sm', max, 2) {
-        display: none;
-      }
+      flex-direction: column;
+      justify-content: space-between;
+      align-items: flex-start;
     }
   }
 
@@ -203,43 +200,28 @@
     left: 0;
     right: 0;
     background-color: $nd-color-basic-light;
-    transform: translate3d(0, -100%, 0);
+    box-shadow: boxShadow(0, 2, 2, 0, rgba(0, 0, 0, .06));
 
-    @include rule(height, (xl: 142px, xlg: 142, lg: 114, md: 80, sm: 60));
+    @include rule(height, (xl: 60px, xlg: 60, lg: 60, md: 60, sm: 60));
 
-    @include screen('lg', max, 2) {
-      transform: translate3d(0, pxtovw(-106, 1366), 0);
+    @include screen('xlg') {
+      box-shadow: boxShadow(0, 2, 2, 0, rgba(0, 0, 0, .06), 1660);
     }
 
-    @include screen('md', max, 2) {
-      transform: translate3d(0, 0, 0);
+    @include screen('lg') {
+      box-shadow: boxShadow(0, 2, 2, 0, rgba(0, 0, 0, .06), 1366);
+    }
+
+    @include screen('md') {
+      box-shadow: boxShadow(0, 2, 2, 0, rgba(0, 0, 0, .06), 960);
+    }
+
+    @include screen('sm') {
+      box-shadow: boxShadow(0, 2, 2, 0, rgba(0, 0, 0, .06), 375);
     }
 
     @include screen('sm', max, 2) {
       box-shadow: boxShadow(0, 2, 2, 0,  rgba(0, 0, 0, .06), 375);
-    }
-
-    .map-in-fullview &, .is-map-animated-out & {
-      @include rule(height, (xl: 114px, xlg: 114, lg: 114, md: 80, sm: 60));
-
-      transform: translate3d(0, 0, 0);
-      box-shadow: boxShadow(0, 2, 2, 0,  rgba(0, 0, 0, .06));
-
-      @include screen('xlg') {
-        box-shadow: boxShadow(0, 2, 2, 0, rgba(0, 0, 0, .06), 1660);
-      }
-
-      @include screen('lg') {
-        box-shadow: boxShadow(0, 2, 2, 0,  rgba(0, 0, 0, .06), 1366);
-      }
-
-      @include screen('md') {
-        box-shadow: boxShadow(0, 2, 2, 0,  rgba(0, 0, 0, .06), 960);
-      }
-
-      @include screen('sm') {
-        box-shadow: boxShadow(0, 2, 2, 0,  rgba(0, 0, 0, .06), 375);
-      }
     }
 
     #{$b} {
@@ -263,58 +245,18 @@
     padding-bottom: 0;
 
     #{$b} {
-      &__boxes {
-        display: none;
-      }
-
-      &__box {
-        @include rule(width, (xl: 7px, xlg: 7, lg: 7, md: 7, sm: 7));
-        @include rule(height, (xl: 7px, xlg: 7, lg: 7, md: 7, sm: 7));
-      }
-
-      &__title {
-        display: block;
-
-        &_main {
-          @include rule(font-size, (xl: 16px, xlg: 16, lg: 16, md: 16, sm: 16));
-          @include rule(margin-top, (xl: 7px, xlg: 7, lg: 7, md: 0, sm: 0));
-          @include rule(margin-bottom, (md: 7, sm: 7));
-
-          display: none;
-        }
-      }
-
       &__close {
         position: absolute;
+        top: 0;
         right: 0;
         display: none;
 
-        @include rule(top, (xl: 6px, xlg: 6, lg: 10, md: 0, sm: 0));
-        @include rule(width, (xl: 68px, xlg: 68, lg: 60, md: 60, sm: 60));
-        @include rule(height, (xl: 68px, xlg: 68, lg: 60, md: 50, sm: 50));
+        @include rule(width, (xl: 50px, xlg: 50, lg: 25, md: 40, sm: 40));
+        @include rule(height, (xl: 60px, xlg: 60, lg: 60, md: 60, sm: 60));
 
         svg {
-          @include rule(width, (xl: 16px, xlg: 16, lg: 16, md: 15, sm: 15));
-          @include rule(height, (xl: 16px, xlg: 16, lg: 16, md: 15, sm: 15));
-        }
-      }
-    }
-
-    .map-in-fullview &,
-    .is-map-animated-out & {
-      #{$b}__boxes {
-        display: flex;
-
-        @include screen('md', max, 2) {
-          display: none;
-        }
-      }
-
-      #{$b}__title {
-        display: none;
-
-        &_main {
-          display: block;
+          @include rule(width, (xl: 16px, xlg: 16, lg: 14, md: 15, sm: 15));
+          @include rule(height, (xl: 16px, xlg: 16, lg: 14, md: 15, sm: 15));
         }
       }
     }
@@ -358,6 +300,7 @@
   }
 
   &_list {
+    padding-bottom: 0;
     border-bottom: 1px solid $nd-color-border6;
     transform: translate3d(0, 0, 0);
     box-shadow: none;
@@ -366,6 +309,7 @@
 
     @include screen('md', max, 2) {
       border-bottom: none;
+      align-items: flex-end;
     }
   }
 
@@ -381,19 +325,13 @@
     }
   }
 
-  &_sort {
-    @include screen('md', max, 2) {
-      align-items: flex-end;
-    }
+  .drop-navigation {
 
-    .map-in-fullview &, .is-map-animated-out & {
+    &__head {
       @include screen('md', max, 2) {
-        align-items: stretch;
+        width: 100%;
       }
     }
-  }
-
-  .drop-navigation {
 
     &__item {
       &:not(:last-child) {
@@ -408,22 +346,8 @@
     }
 
     &__dropdown .drop-navigation__link {
-      @include rule(padding-bottom, (xl: 27px, xlg: 27, lg: 16, md: 10, sm: 10));
-
-      .map-in-fullview &, .is-map-animated-out & {
-        @include rule(padding-bottom, (xl: 16px, xlg: 16, lg: 16, md: 10, sm: 10));
-      }
-    }
-
-    .map-in-fullview &, .is-map-animated-out &, .layout-header_list & {
-      @include screen('md', max, 2) {
-        width: 100%;
-      }
-
-      &__head {
-        @include screen('md', max, 2) {
-          width: 100%;
-        }
+      #{$b}_list & {
+        @include rule(padding-bottom, (xl: 27px, xlg: 27, lg: 16, md: 10, sm: 10));
       }
     }
   }
