--- a/app/blocks/space-gallery/space-gallery.scss
+++ b/app/blocks/space-gallery/space-gallery.scss
@@ -3,9 +3,39 @@
 
   position: relative;
   display: block;
-  width: 100%;
+  margin-left: -150px;
+  width: calc(100% + 200px);
 
-  @include rule(height, (xl: 388px, xlg: 388, lg: 270, md: 238, sm: 212));
+  @include screen('xl', max, 2) {
+    margin-left: -60px;
+    width: calc(100% + 110px);
+  }
+
+  @include rule(margin-left, (xlg: -60, lg: -50, md: -50, sm: 0));
+  @include rule(margin-right, (xl: -50px, xlg: -50, lg: -30, md: -40, sm: 0));
+  @include rule(height, (xl: 468px, xlg: 468, lg: 350, md: 318, sm: 212));
+
+  @include screen('xlg', max, 2) {
+    width: 58.49vw;
+  }
+
+  @include screen('lg', max, 2) {
+    width: 52.93vw;
+  }
+
+  @include screen('md', max, 2) {
+    width: 68.75vw;
+  }
+
+  @include screen('sm', max, 2) {
+    width: 100%;
+  }
+
+  .layout_static & {
+    width: 100%;
+    margin-left: 0;
+    margin-right: 0;
+  }
 
   &__wrapper {
     width: 100%;
