--- a/app/components/filter/nd-filter.pug
+++ b/app/components/filter/nd-filter.pug
@@ -1,14 +1,13 @@
 mixin nd-filter()
   +b.nd-filter&attributes(attributes)
-    +e.item
-      +e.A.button(href="#").nd-hide-from-sm
+    +e.item_back.nd-hide-from-sm
+      +e.A.button(href="#")
         +icon('back-arrow').__icon_back.js-layout-close-active
-      +e.BUTTON.button.nd-hide-sm.js-sr-filter-reset(type="reset" disabled form="search-filter")
-        +icon('cross-bold').__icon_cross
-        span Clear filter
     +e.item
-      +modal-output({placeholder: 'Location', default: 'Anywhere'})._special._location.js-toggle-modal(data-modal-target="filter-location" data-modal-output-type="city")
+      +modal-output({placeholder: 'Location', default: 'Anywhere'})._special._notoggle._location.js-toggle-modal(data-modal-target="filter-location" data-modal-output-type="city")
     +e.item
-      +modal-output({placeholder: 'Office type', default: 'Any'})._special._type.js-toggle-modal(data-modal-target="filter-type" data-modal-output-type="offer")
+      +modal-output({placeholder: 'Office type', default: 'Any'})._special._type._notoggle.js-toggle-modal(data-modal-target="filter-type" data-modal-output-type="offer")
     +e.item_team
-      +modal-output({placeholder: 'Team size', default: 'Any'})._special._team.js-toggle-modal(data-modal-target="filter-team" data-modal-output-type="team")
+      +modal-output({placeholder: 'Team size', default: 'Any'})._special._team._notoggle.js-toggle-modal(data-modal-target="filter-team" data-modal-output-type="team")
+    +e.item_submit.nd-hide-sm
+      +nd-button-icon('button', {icon: 'search'})._icon_reverse._stolzl.__button(type="submit")
