--- a/app/components/offer-description/offer-description.scss
+++ b/app/components/offer-description/offer-description.scss
@@ -32,14 +32,24 @@
 
   &__media {
     position: relative;
-    width: 100%;
+    // width: 100%;
     overflow: hidden;
-    padding-top: 65.8%;
+    padding-top: 28.541667vw;
+    margin-left: -150px;
 
-    @include rule(border-radius, (xl: 3px, xlg: 3, lg: 3, md: 3, sm: 3));
+    @include screen('xl', max, 2) {
+      margin-left: -60px;
+    }
+
+    @include rule(margin-left, (xlg: -60, lg: -50, md: -50, sm: 0));
+    @include rule(margin-right, (xl: -50px, xlg: -50, lg: -50, md: -40, sm: 0));
 
     @include screen('lg', max, 2) {
-      padding-top: 65.49%;
+      padding-top: 29.868228vw;
+    }
+
+    @include screen('md', max, 2) {
+      padding-top: 38.645833vw;
     }
 
     @include screen('sm', max, 2) {
@@ -47,7 +57,19 @@
     }
 
     &:not(:first-child) {
-      @include rule(margin-top, (xl: 18px, xlg: 18, lg: 15, md: 15, sm: 20));
+      @include rule(margin-top, (sm: 20));
+    }
+
+    .layout_static & {
+      width: 100%;
+      margin-left: 0;
+      margin-right: 0;
+
+      @include rule(border-radius, (xl: 3px, xlg: 3, lg: 3, md: 3, sm: 3));
+
+      &:not(:first-child) {
+        @include rule(margin-top, (xl: 18px, xlg: 18, lg: 15, md: 15, sm: 20));
+      }
     }
   }
 
