--- a/app/pages/search/search-v2-header.pug
+++ b/app/pages/search/search-v2-header.pug
@@ -12,14 +12,14 @@ block bodyClasses
 
 block header
   - var headerClass = ' is-login'
-  - var pageClass = '_nopad _header-search'
+  - var pageClass = '_nopad'
   - var isMap = true
   - var isMapNew = true
   - var host = false
   - var headSpec = true
 
 block content
-  +layout._search-header
+  +layout
     +e.column_map.js-map-sm-show-fullview
       +nd-search-map-v2('search-map', 'assets/data/space-markers.json')
 
@@ -28,9 +28,7 @@ block content
         +nd-section.md-only-visibility-hidden
           +nd-section-header
             +nd-section-title._fz30._sm-fz22._ls-015 Office spaces in London
-            +e.filter-group
-              +e.text_fz15._ls0._gray Looking for workspace type, Any team size and Any price
-              +filter-section({groupClass: 'nd-hide-sm'})(form="search-filter")
+            +e.text_fz15._ls0._gray Looking for workspace type, Any team size and Any price
 
         +nd-results._v2
           each item in getData('new-nd-spaces-search.json')
@@ -134,10 +132,8 @@ block content
             +styled-radio(item.title)._team.__item
               +e.INPUT.input(type="radio", value=item.value, name=item.name, data-modal-item, data-modal-item-value=(item.value2 || item.value), data-modal-item-type="team")
     +e.FIELDSET.fieldset
-      +modal({header: {title: 'Price range'}, footer: {class: '_range', view: 'range'}})#filter-range
-        +nd-range({output: {minLabel: 'Min', maxLabel: 'Max', max: 'maxPrice', min: 'minPrice', formboxClass: '_bg-white _sm-h50', inputClass: '_sm-h50'}})(data-start="[0, 5000]" data-connect="[false, true, false]" data-step="10" data-margin="30" data-min="0" data-max="10000" data-currency="£" data-modal-item data-modal-item-type="range").__range
-      +modal({header: {title: 'Available from'}, footer: false})#filter-available
-      +modal({header: {title: 'Total floor area'}, footer: false})#filter-area
+      +modal({header: {title: 'Filter'}, footer: {class: '_range', view: 'range'}})#filter-multi
+        +nd-range({output: {minLabel: 'Min', maxLabel: 'Max', max: 'maxPrice', min: 'minPrice', formboxClass: '_bg-white _sm-h50', inputClass: '_sm-h50'}})(data-start="[0, 5000]" data-connect="[false, true, false]" data-step="10" data-margin="30" data-min="0" data-max="10000" data-currency="£" data-modal-item data-modal-item-type="multi").__range
       +modal({header: {title: 'Sort by'}, footer: false})#filter-sort
         +e.list
           each item in [{title: 'Popular', value: 'Popular', name: 'sort', /*checked: true*/}, {title: 'Relevance', value: 'Relevance', name: 'sort'}, {title: 'Price ascending', value: 'Price ascending', name: 'sort'}, {title: 'Price descending', value: 'Price descending', name: 'sort'}]
